# Obsidian

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Engine/include/: Engine.h  graphics.h  input.h  window.h
Engine/src/Core/: engine.cpp
Engine/src/Graphics/: graphics.cpp  window.cpp
Engine/src/Input/: input.cpp
Obsidian/: Obsidian.h
Obsidian/Assets/: AssetManager.cpp  AssetManager.h
Obsidian/Components/: Animation.cpp  Animation.h  Sprite.cpp  Sprite.h
Obsidian/Core/: Application.cpp  Application.h  EntryPoint.h  Window.cpp  Window.h
Obsidian/Events/: Event.cpp  Event.h
Obsidian/Input/: Input.cpp  Input.h
Obsidian/Maths/: Vec2.cpp  Vec2.h
Obsidian/Physics/: Physics.cpp  Physics.h
Obsidian/Renderer/: Camera.cpp  Camera.h  Color.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Texture.cpp  Texture.h
Obsidian/World/: Tile.h  TileMap.cpp  TileMap.h  TileRegistry.cpp  TileRegistry.h
Sandbox/: sandbox.cpp
sandbox/src/: main.cpp
